<resources>
    <string name="app_name">Estate Gurus</string>

    <!--dashboard -->
    <!-- categories -->
    <string name="buy">BUY</string>
    <string name="rent">RENT</string>
    <string name="sell">SELL</string>
    <string name="search_text">Search...</string>

    <string name="new_project">Newly Launched Projects</string>
    <string name="types">Apartments,Villas and More...</string>
    <string name="view_all">view_all</string>
    <string name="recommended_properties">Recommanded properties</string>

    <string-array name="BHKS">
        <item> 1 BHK </item>
        <item> 1.5 BHK </item>
        <item> 2 BHK </item>
        <item> 3 BHK </item>
    </string-array>

    <string-array name="TYPE">
        <item> Furnished </item>
        <item> UnFurnished </item>
        <item> Semi-Furnished </item>
    </string-array>

    <string-array name="PRICE">
        <item> Between 1k  to 5k </item>
        <item> Between 5k  to 10k </item>
        <item> Between 10k to 20k </item>
        <item> Between 20  to 30k </item>
        <item> Between 30k to 40k </item>
    </string-array>

    <string name="invalid_name">invalid name</string>
    <string name="invalid_phone">invalid phone no.</string>
    <string name="invalid_email">invalid email</string>
    <string name="invalid_password">invalid password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_sell_image">sell_image</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_lodha_details">lodha_details</string>
    <string name="linktoforms">
        <a href="https://forms.gle/MMqvo9hpoNrhRJxp8">Upload</a>
    </string>

</resources>